# focalors

./: .gitignore  CMakeLists.txt  Makefile  README.md  aes.cpp  bcm.cpp  crypt.h  des.cpp  des.h  des_const.h  group-mode.cpp  group-mode.h  main.cpp  rsa.cpp  type.cpp  zuc.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/.devcontainer/: Dockerfile
.github/workflows/: devcontainer-build-and-push.yml
.github/workflows/.github/workflows/: devcontainer-build-and-push.yml
debug/: CMakeLists.txt  debug.cpp  debug.h
include/: aes.h  bcm.h  bcm_impl.h  crypt.h  des.h  focalors.h  focalors.hpp  reverse_bitset.h  reverse_bitset_impl.hpp  type.h  type_impl.h  utils.h  word.h  word.hpp  zuc.h
src/: aes.cpp  des.cpp  elgamal.cpp  main.cpp  reverse_bitset_impl.hpp  rsa.cpp  type.cpp  utils.cpp  word.cpp  zuc.cpp  zuc.h
src/bc/: aes.cpp  des.cpp  des.h
src/bcm/: bcm.h  cbc.cpp  cfb.cpp  ecb.cpp  ofb.cpp
src/include/: reverse_bitset.h
src/utils/: word.cpp
tests/: CMakeLists.txt  aes_test.cpp  des_test.cpp  test.cpp
tests/bc_test/: aes_test.cpp  des_test.cpp
tests/bcm_test/: cbc_test.cpp  cfb_test.cpp  ecb_test.cpp  ofb_test.cpp
tests/include/: test.h
